# gse_fls

./: .gitignore  Doxyfile  README.md  embraer_theme.css
gse/: .gitignore  gse_to_test.py  main.py  pytest.ini  requirements.txt
gse/frontend/: .gitignore  main.py  main.qml  pyproject.toml  pyproject.toml.user.62b0267
gse/frontend/qml/controls/: LeftMenuBtn.qml  ToggleButton.qml  TopBarButton.qml
gse/frontend/qml/pages/: loginPage.qml  loginPageUpdated.qml  uploadPage.qml  uploadPageUpdated.qml
logs/: GSE_Sessao_2025-11-03_10-26-55.txt  GSE_Sessao_2025-11-03_11-14-47.txt  GSE_Sessao_2025-11-05_15-05-45.txt  GSE_Sessao_2025-11-05_15-12-55.txt  GSE_Sessao_2025-11-05_15-13-02.txt  GSE_Sessao_2025-11-05_15-13-27.txt  GSE_Sessao_2025-11-05_15-13-48.txt  GSE_Sessao_2025-11-05_15-14-22.txt  GSE_Sessao_2025-11-05_15-16-29.txt  GSE_Sessao_2025-11-05_15-18-29.txt  GSE_Sessao_2025-11-05_15-23-04.txt  GSE_Sessao_2025-11-05_15-24-23.txt  GSE_Sessao_2025-11-05_15-25-07.txt  GSE_Sessao_2025-11-05_15-25-46.txt  GSE_Sessao_2025-11-05_19-30-07.txt  GSE_Sessao_2025-11-06_14-06-30.txt  GSE_Sessao_2025-11-13_00-23-28.txt  GSE_Sessao_2025-11-16_15-11-37.txt
modulo_bc/components/state_machine/: CMakeLists.txt
modulo_bc/components/state_machine/include/state_machine/: fsm.h
modulo_bc/components/state_machine/src/: fsm.c  state_error.c  state_init.c  state_maint_wait.c  state_operational.c  state_save.c  state_table.c  state_teardown.c  state_upload_prep.c  state_uploading.c  state_verify.c
modulo_bc/components/state_machine/test/: CMakeLists.txt  test_state_teardown.c
(+86 files in other folders)
